# carpmath

./: CMakeLists.txt  README.md  main.cpp  mat4.cpp  mat4.h  mathhelp.h  quat.cpp  quat.h  transform.h  uninittype.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
